--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "node server/index.js",
+    "dev-server": "nodemon server/index.js"
   },
   "dependencies": {
     "express": "^4.16.3",
@@ -17,7 +18,6 @@
     "request": "^2.87.0"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "http-proxy-middleware": "^0.18.0"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
   }
 }
